crates/shipper-core/src/state/events/snapshots/shipper_core__state__events__tests__preflight_started_debug.snap
---
source: crates/shipper-core/src/state/events/tests.rs
expression: event
---
PublishEvent {
    timestamp: 2025-01-15T12:00:00Z,
    event_type: PreflightStarted,
    package: "workspace",
}
