crates/shipper-core/src/state/events/snapshots/shipper_core__state__events__tests__publish_waiting_debug.snap
---
source: crates/shipper-core/src/state/events/tests.rs
expression: event
---
PublishEvent {
    timestamp: 2025-01-15T12:00:00Z,
    event_type: PublishWaiting {
        reason: "retry backoff",
        delay_ms: 10000,
        until: 2025-01-15T12:00:00Z,
    },
    package: "my-crate@1.0.0",
}
