crates/shipper-core/src/state/events/snapshots/shipper_core__state__events__tests__readiness_poll_debug.snap
---
source: crates/shipper-core/src/state/events/tests.rs
expression: event
---
PublishEvent {
    timestamp: 2025-01-15T12:00:00Z,
    event_type: ReadinessPoll {
        attempt: 3,
        visible: false,
    },
    package: "my-crate@1.0.0",
}
