crates/shipper-core/src/state/events/snapshots/shipper_core__state__events__tests__readiness_poll_scheduled_debug.snap
---
source: crates/shipper-core/src/state/events/tests.rs
expression: event
---
PublishEvent {
    timestamp: 2025-01-15T12:00:00Z,
    event_type: ReadinessPollScheduled {
        attempt: 4,
        delay_ms: 1500,
        next_poll_at: 2025-01-15T12:00:00Z,
    },
    package: "my-crate@1.0.0",
}
